@@ -21,7 +21,7 @@ public class RecipeController {
     @GetMapping
     @RequestMapping("/recipe/{id}/show")
     public String showById(@PathVariable String id, Model model) {
-        model.addAttribute("recipe", recipeService.findById(new Long(id)));
+        model.addAttribute("recipe", recipeService.findById(Long.valueOf(id)));
         return "recipe/show";
     }
 
@@ -42,7 +42,7 @@ public class RecipeController {
     @GetMapping
     @RequestMapping("recipe/{id}/update")
     public String updateRecipe(@PathVariable String id, Model model) {
-        model.addAttribute("recipe", recipeService.findCommandById(new Long(id)));
+        model.addAttribute("recipe", recipeService.findCommandById(Long.valueOf(id)));
         return "recipe/recipeform";
     }
 
@@ -52,7 +52,7 @@ public class RecipeController {
 
         log.debug("Deleting id:" + id);
 
-        recipeService.deleteById(new Long(id));
+        recipeService.deleteById(Long.valueOf(id));
         return "redirect:/";
     }
 
